--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,10 @@ button {
   box-shadow: 5px 5px;
 }
 
+button:hover {
+  color: red;
+}
+
 .form-section {
   display: flex;
   flex-direction: column;
