--- a/src/style.css
+++ b/src/style.css
@@ -6,15 +6,11 @@
   box-sizing: border-box;
 }
 
-li {
-  list-style: none;
-  font-size: 18px;
-  padding: 5px;
-}
-
 body {
   margin: 0;
   padding: 5%;
+  background-color: rgb(242, 247, 247);
+  font-family: 'Ubuntu', sans-serif;
 }
 
 main {
@@ -24,7 +20,7 @@ main {
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 54px;
 }
 
 h3 {
@@ -43,16 +39,18 @@ button {
   width: 100px;
   height: 30px;
   box-shadow: 5px 5px;
-}
-
-button:hover {
-  color: red;
+  font-family: inherit;
+  font-size: 17px;
+  font-weight: 500;
+  background-color: rgb(252, 243, 230);
+  color: rgb(15, 15, 15);
+  cursor: pointer;
 }
 
 .form-section {
   display: flex;
   flex-direction: column;
-  gap: 10%;
+  gap: 40px;
 }
 
 .submit-btn {
@@ -63,11 +61,30 @@ ul {
   border: 3px solid black;
 }
 
+li {
+  list-style: none;
+  font-size: 18px;
+  padding: 5px;
+  font-weight: 500;
+}
+
 .color {
-  background-color: rgb(175, 179, 179);
+  background-color: rgb(93, 99, 99);
+}
+
+.other {
+  background-color: rgb(243, 241, 237);
 }
 
 input {
-  padding: 5px;
+  padding: 10px 20px;
   border: 3px solid black;
+  background-color: rgb(252, 243, 230);
+}
+
+input::placeholder {
+  font-family: inherit;
+  font-size: 18px;
+  font-weight: 500;
+  color: rgb(10, 10, 10);
 }
